# olspow

./: LICENSE  README.md  pyproject.toml
examples/: covariate_adjustment_with_clustered_data.ipynb  generate_data.py
src/: Scratch.ipynb  __init__.py  create_data.py  olspow.py
src/olspow/: __init__.py  olspow.py
src/olspow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_locally.ipynb
