[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "olspow"
version = "1.0.0"
authors = [
  { name="Benjamin S. Knight", email="knight.benjamin@gmail.com" },
]
description = "Python package for conducting power analysis given ratio metrics, clustered data, and covariate adjustment."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "humanize",
  "numpy",
  "pandas",
  "scipy",
  "statsmodels",
]

[project.urls]
Homepage = "https://github.com/b-knight/olspow"
Issues = "https://github.com/b-knight/olspow/issues"